@@ -13,18 +13,12 @@ plugins {
 	// required by jitpack
 	id 'maven-publish'
 	// awesome git tag / gradle version integration
-	id 'pl.allegro.tech.build.axion-release' version '1.13.6'
+	id 'pl.allegro.tech.build.axion-release' version '1.14.5'
 }
 
 // [general] configuration
 project.ext {
-	groovyVersion          = '3.0.9'
-	spockVersion           = '2.3-groovy-3.0'
-	slf4jVersion           = '2.0.7'
-	cacheContainersVersion = 'release-1.1.2'
-	urlDecoratorsVersion   = 'release-2.0.1'
-	proxyEnvVersion        = 'release-1.2.3' 
-	specSupportVersion     = 'release-0.1.6'
+	groovyVersion = '3.0.21'
 }
 
 scmVersion {
@@ -41,7 +35,7 @@ project.with {
 }
 
 allprojects {
-	sourceCompatibility = 8
+	sourceCompatibility = 17
 	targetCompatibility = sourceCompatibility
 }
 
@@ -52,22 +46,18 @@ repositories {
 }
 
 dependencies {
-	implementation (
-		"org.slf4j:slf4j-api:$slf4jVersion"
-	)
-
 	api (
 		"org.codehaus.groovy:groovy:$groovyVersion",
 		"org.codehaus.groovy:groovy-json:$groovyVersion",
-		"com.github.grational:cache-containers:$cacheContainersVersion",
-		"com.github.grational:url-decorators:$urlDecoratorsVersion",
-		"com.github.grational:proxy-environment:$proxyEnvVersion"
+		'com.github.grational:cache-containers:release-1.2.0',
+		'com.github.grational:url-decorators:release-2.1.0',
+		'com.github.grational:proxy-environment:release-1.3.0'
 	)
 
 	// We use the awesome Spock testing and specification framework
 	testImplementation (
-		"org.spockframework:spock-core:$spockVersion",
-		"com.github.grational:specification-support:$specSupportVersion"
+		'org.spockframework:spock-core:2.3-groovy-3.0',
+		"com.github.grational:specification-support:release-1.0.0"
 	)
 }
 
@@ -75,6 +65,7 @@ dependencies {
 tasks.withType(Test) {
 	useJUnitPlatform()
 	maxParallelForks = Runtime.runtime.availableProcessors() / 2
+	jvmArgs('--add-opens=java.base/java.util=ALL-UNNAMED')
 }
 jar {
 	dependsOn 'check'
